--- a/index.html
+++ b/index.html
@@ -300,7 +300,8 @@
       </div>
     </footer>
 
-   <script type="module" src="/main.js"></script>
+   <script type="module" src="main.js"></script>
   </body>
 </html>
+
 
