--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Portfolio of a 14-year-old full-stack developer specializing in JavaScript, React, Node.js, Express, and Java" />
     <title>Portfolio - Developer</title>
@@ -212,7 +212,7 @@
                   <span class="tech-tag">HTML</span>
                 </div>
                 <div class="project-links">
-                  <a href="#" class="project-link" target="_blank" rel="noopener">
+                  <a href="https://github.com/7ukasx/Stockapp" class="project-link" target="_blank" rel="noopener">
                     <i class="fab fa-github"></i> Code
                   </a>
                   <a href="#" class="project-link" target="_blank" rel="noopener">
@@ -226,7 +226,7 @@
               <div class="project-image">
                 <div class="image-placeholder-project">
                   <i class="fas fa-image"></i>
-                  <p>Add your project screenshot here</p>
+                  <p>Project Screenshot</p>
                 </div>
               </div>
               <div class="project-content">
@@ -303,5 +303,6 @@
    <script type="module" src="main.js"></script>
   </body>
 </html>
+
 
 
