--- a/index.html
+++ b/index.html
@@ -156,6 +156,14 @@
               <i class="fas fa-language"></i>
               <h3>English C1</h3>
             </div>
+            <div class="skill-card">
+              <i class="fas fa-language"></i>
+              <h3>German C2</h3>
+            </div>
+            <div class="skill-card">
+              <i class="fas fa-dumbbell"></i>
+              <h3>Gym-enthusiast</h3>
+            </div>
           </div>
         </div>
       </section>
@@ -299,9 +307,9 @@
         <p class="footer-note">Built with vanilla HTML, CSS & JavaScript</p>
       </div>
     </footer>
-    <button id="scrollToTopBtn" class="scroll-to-top" aria-label="Zurück nach oben">
-    <i class="fas fa-arrow-up"></i>
-</button>
+    <a id="scrollTopBtn" href="#" >
+    <i class="fas fa-chevron-up"></i>
+</a>
    <script type="module" src="main.js"></script>
   </body>
 </html>
