--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <div class="profile-image">
                 <div class="image-placeholder">
                   
-                  <img src="pfp-github.jpg" alt="">
+                  <img src="le-logo.png" alt="">
                 </div>
               </div>
             </div>
@@ -313,3 +313,4 @@
    <script type="module" src="main.js"></script>
   </body>
 </html>
+
