--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
           <li><a href="#contact" class="nav-link">Contact</a></li>
           <li>
             <button class="theme-toggle" id="themeToggle" aria-label="Toggle theme">
-  <i class="fas fa-moon" id="themeIcon"></i>
-</button>
-
+            <i class="fas fa-moon" id="themeIcon"></i></button>
           </li>
         </ul>
       </div>
@@ -73,7 +71,7 @@
 
             <div class="hero-cta">
               <a href="#projects" class="btn btn-primary">View My Work</a>
-              <a href="#contact" class="btn btn-secondary">Get In Touch</a>
+              <a href="https://7ukasx.github.io/Resume---Lukas-Eifertinger/" class="btn btn-secondary">View Resume</a>
             </div>
           </div>
 
@@ -298,6 +296,13 @@
             Email copied to clipboard!
           </div>
         </div>
+        <div class="contact-download">
+    <a href="Lukas_Eifertinger_Resume.pdf" download class="download-btn cta-btn">
+        <i class="fas fa-file-arrow-down"></i> Lebenslauf herunterladen
+    </a>
+</div>
+
+</section>
       </section>
     </main>
 
@@ -313,4 +318,3 @@
    <script type="module" src="main.js"></script>
   </body>
 </html>
-
