--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
             <div class="hero-cta">
               <a href="#projects" class="btn btn-primary">View My Work</a>
-              <a href="https://7ukasx.github.io/Resume---Lukas-Eifertinger/" class="btn btn-secondary">View Resume</a>
+              <a href="https://7ukasx.github.io/Resume---Lukas-Eifertinger/" class="btn btn-secondary" target="_blank">View Resume</a>
             </div>
           </div>
 
@@ -297,7 +297,7 @@
           </div>
         </div>
         <div class="contact-download">
-    <a href="Lukas_Eifertinger_Resume.pdf" download class="download-btn cta-btn">
+    <a href="Lukas_Eifertinger_Resume.pdf" download class="cv-download-btn">
         <i class="fas fa-file-arrow-down"></i> Lebenslauf herunterladen
     </a>
 </div>
